# kafka-poc

./: .gitignore  LICENSE  Makefile  README.md  deploy
lib/bash/funcs/: check-sudo.sh
src/bash/deploy/: run.sh
src/bash/deploy/ubuntu/: run.sh
src/bash/deploy/ubuntu/ubuntu-20.04.2-lts/: check-install-python-modules.func.sh  morph-dir.func.sh  print-usage.func.sh  run-hello-world.func.sh
src/docker/devops/: Dockerfile
src/python/kafka/: pyproject.toml
