[tool.poetry]
name = "kafka-poc"
version = "1.0.0"
description = "A kafka producer and consumer scripts."
authors = ["Bruno Araujo <araujo.contato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kafka-python = "^2.0.2"

[tool.poetry.dev-dependencies]
pylint = "^2.8.3"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
